# preheat-linux

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  INSTALL.md  Makefile.am  README.md  configure.ac  install.sh  issues.md  post-fix-audit.md  project_status.md  setup.sh  temp.md
debian/: preheat.logrotate  preheat.service  preheat.service.in
docs/: README.md  SNAP_FIREFOX_ISSUE_CONTEXT.md  STATE_RESTRICTIONS.md  UBUNTU_VM_TEST_FINDINGS.md  _config.yml  advanced-usage.md  api-reference.md  architecture.md  configuration.md  how-it-works.md  index.md  installation.md  introduction.md  quick-start.md  troubleshooting.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/examples/: README.md  advanced-example.md  basic-example.md  index.md
man/: preheat-ctl.1  preheat.8  preheat.conf.5
scripts/: install.sh  multi_snap_test.sh  run-tests.sh  setup-whitelist.sh  snap_firefox_debug.sh  verify_install.sh
src/: Makefile.am
src/config/: config.c
src/daemon/: daemon.c  main.c  session.c  stats.c  stats.h
src/monitor/: proc.c  spy.c
src/predict/: prophet.c
src/readahead/: readahead.c
src/state/: state.c  state.h  state_exe.c  state_family.c  state_io.c  state_markov.c
src/utils/: crc32.c  crc32.h  desktop.c  lib_scanner.c  lib_scanner.h  logging.h  seeding.c
tests/integration/: smoke_test.sh  test_state_hardening.sh
tools/: ctl_cmd_apps.c  ctl_cmd_stats.c  ctl_config.c  ctl_state.c  preheat-ctl.c
